update sshdroid .bashrc

--- a/sshdroid/Dockerfile
+++ b/sshdroid/Dockerfile
@@ -2,21 +2,11 @@ FROM huaixiaoz/andocker:latest
 MAINTAINER huaixiaoz "hello@itmp.top"
 
 # Setup environment
+RUN mv ~/.bashrc ~/.bashrc~
+COPY ./.bashrc ~/.bashrc
 #ENV ANDROID_HOME /opt/android-sdk-linux
 #ENV ANDROID_NDK_HOME /opt/android-ndk-r11c
 #ENV PATH ${PATH}:${ANDROID_HOME}/tools:${ANDROID_HOME}/platform-tool
-cat << EOF >> ~/.bashrc
-# set bash_completion
-if [ -f /etc/bash_completion ] && ! shopt -oq posix; then
-    . /etc/bash_completion
-fi
-# set Android Development Environment
-export ANDROID_HOME="/opt/android-sdk-linux"
-export ANDROID_NDK_HOME="/opt/android-ndk-r11c"
-export PATH="\${PATH}:\${ANDROID_HOME}/tools:\${ANDROID_HOME}/platform-tool:\${ANDROID_NDK_HOME}"
-EOF
-
-
 
 # Update
 RUN apt-get update && apt-get upgrade -y
